# rmul24_gazebo_simulator

./: CMakeLists.txt  LICENSE  README.md  follow.sh  package.xml  sim.sh  web_player.sh  web_referee.sh
config/: base_params.yaml  gz_world.yaml  referee_system_1v1.yaml  robots_init_pose.yaml  ros_gz_bridge.yaml
launch/: bringup_sim.launch.py  develop.launch.py  gazebo.launch.py  referee_system.launch.py  rviz.launch.py  spawn_robots.launch.py
resource/ign/: gui.config
resource/models/RMUL_2024/: model.config  model.sdf
resource/models/mid360/: model.config  model.sdf  model.sdf.xmacro
resource/models/mid360/meshes/: mid360.dae
resource/models/rmuc_2024/: model.config  model.sdf
resource/models/rmul_2024/: model.config  model.sdf
resource/models/rplidar_a2/: model.sdf  model.sdf.xmacro
resource/worlds/: rmuc_2024_world.sdf  rmul24_world.sdf  rmul_2024_world.sdf
resource/xmacro/: rmul24_sentry_robot.sdf  rmul24_sentry_robot.sdf.xmacro
rviz/: visualize.rviz
scripts/player_web/: main.py  main_no_vision.py  main_vision.py  ros_handler.py  test.py
scripts/player_web/static/js/: control.js  listener.js  variables.js  web_socket_utils.js
scripts/player_web/templates/: index.html
scripts/referee_system/: referee_system_client.py  simple_competition_1v1.py
scripts/referee_web/: main.py
scripts/referee_web/static/js/: web_socket_utils.js
scripts/referee_web/templates/: index.html
